--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "src/electron/main",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev:react": "vite",
     "dev:electron": "electron .",
     "build": "tsc -b && vite build",
+    "transpile:electron": "tsc --project tsconfig.electron.json",
     "lint": "eslint .",
     "preview": "vite preview"
   },
