--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc -b && vite build",
     "transpile:electron": "tsc --project tsconfig.electron.json",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dist:mac": "bun run transpile:electron && bun run build && electron-builder --mac --arm64"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "electron": "^38.1.2",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
