--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist-electron/main.js",
   "scripts": {
+    "dev": "concurrently \"bun run dev:react\" \"bun run dev:electron\"",
     "dev:react": "vite",
     "dev:electron": "npm run transpile:electron; NODE_ENV=development electron .",
     "build": "tsc -b && vite build",
@@ -22,6 +23,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "concurrently": "^9.2.1",
     "electron": "^38.1.2",
     "electron-builder": "^26.0.12",
     "eslint": "^9.35.0",
