--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dist:mac": "bun run transpile:electron && bun run build && electron-builder --mac --arm64"
   },
   "dependencies": {
+    "os-utils": "^0.0.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/os-utils": "^0.0.4",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
